# agent-relay

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  vite.config.js
.github/: pull_request_template.md
.github/workflows/: rust-ci.yml
crates/relay-broker/: Cargo.toml
crates/relay-broker/src/: auth.rs  join_ticket.rs  lib.rs  main.rs  protocol.rs  public_control.rs  state.rs  tests.rs
crates/relay-broker/src/state/: tests.rs
crates/relay-server/: Cargo.toml
crates/relay-server/src/: auth.rs  broker.rs  codex.rs  codex_local.rs  main.rs  protocol.rs  state.rs  tests.rs
crates/relay-server/src/auth/: tests.rs
crates/relay-server/src/broker/: auth.rs  crypto.rs  remote_actions.rs  session_claim.rs  tests.rs
crates/relay-server/src/broker/crypto/: tests.rs
crates/relay-server/src/codex_local/: tests.rs
crates/relay-server/src/state/: app.rs  persistence.rs  relay.rs  security.rs  tests.rs
crates/relay-server/src/state/relay/: approval.rs  device.rs  transcript.rs
crates/relay-server/src/state/security/: tests.rs
docker/: broker.Dockerfile
frontend/: app.js  index.html  remote.html  session-stream.js  session-stream.test.mjs  styles.css
frontend/public/: remote-sw.js
frontend/remote/: actions.js  actions.test.mjs  broker-client.js  broker-client.test.mjs  crypto.js  crypto.test.mjs  dom.js  encoding.js  main.js  pairing-errors.js  pairing.js  pairing.test.mjs  pwa.js  render-chrome.js  render-chrome.test.mjs  render-transcript.js  render.js  render.test.mjs  state.js  state.test.mjs
scripts/: browser-local-allowed-roots-e2e.mjs  browser-local-auth-e2e.mjs  browser-local-delete-e2e.mjs  browser-local-session-e2e.mjs  browser-pairing-e2e.mjs  browser-public-broker-e2e.mjs  browser-public-enrollment-e2e.mjs  browser-public-persistence-e2e.mjs  browser-public-reclaim-e2e.mjs  browser-public-refresh-e2e.mjs  browser-public-revoke-e2e.mjs  dev-full.mjs  e2e-thread-cleanup.mjs  pairing-smoke.mjs
web/: app.js  index.html  remote-manifest.webmanifest  remote.html  remote.js  styles.css
web/assets/: index-DoRIqbPG.js  remote-CqZTN_X6.js  styles-4oHbdP3H.css
web/remote/: crypto.js  encoding.js  main.js  pairing.js  render-chrome.js  render.js  session-ops.js  state.js  utils.js
