[workspace]
members = ["crates/relay-broker", "crates/relay-server"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Elastic-2.0"
version = "0.1.0"

[workspace.dependencies]
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
