[package]
name = "relay-broker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
futures-util.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
