[package]
name = "relay-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
base64.workspace = true
futures-util.workspace = true
hmac.workspace = true
qrcode.workspace = true
rand.workspace = true
relay-broker = { path = "../relay-broker" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
xsalsa20poly1305.workspace = true
